@@ -12,6 +12,7 @@
   * Reposition dialogs on orientation change
   * Added queue to dialogs to only show one at a time
   * Added the M.MULTIPLE_SELECTION_DIALOG mode to M.SelectionListView
+  * Added 4-column layout to M.GridView
 
 ** Version 0.7 - Date 18.10.2011 **
 
